--- a/assets/stylesheets/cog.css
+++ b/assets/stylesheets/cog.css
@@ -36,8 +36,43 @@
 }
 
 .cog-about-main {
-  display: block;
+  display: none;
   position:fixed;
-  top: 25%;
-  left: 25%;
+  top: 34.75%;
+  left: 35%;
+  font-family: Lora;
+  border-radius: 25px;
+  background-color: #e8e5d3;
+  color: #ffbd54;
+  padding: 10px;
+}
+
+.about-about{
+  font-size: 24px;
+  border-bottom: 2px solid #ffbd54;
+  display: flex;
+  justify-content: center;
+}
+
+.about-name{
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+}
+
+.about-year{
+  font-size: 14px;
+  display: flex;
+  justify-content: center;
+}
+
+.about-img-container{
+  justify-content: center;
+  align-items: center;
+}
+
+.about-img {
+  height: 35px;
+  weight: 35px;
+  padding: 15px;
 }
