--- a/assets/stylesheets/cog.css
+++ b/assets/stylesheets/cog.css
@@ -1,5 +1,4 @@
 .cog-main {
-
 }
 
 .cog-image {
@@ -36,10 +35,8 @@
 }
 
 .cog-about-main {
-  display: none;
-  position:fixed;
-  top: 34.75%;
-  left: 35%;
+  display: block;
+  position: fixed;
   font-family: Lora;
   border-radius: 25px;
   background-color: #e8e5d3;
@@ -47,28 +44,38 @@
   padding: 10px;
 }
 
-.about-about{
+.about-container {
+  width: 100%;
+  height: 100%;
+  display: none;
+  position: fixed;
+  z-index: 500;
+  justify-content: center;
+  align-items: center;
+}
+
+.about-about {
   font-size: 24px;
   border-bottom: 2px solid #ffbd54;
   display: flex;
   justify-content: center;
 }
 
-.about-name{
+.about-name {
   font-size: 18px;
   display: flex;
   justify-content: center;
 }
 
-.about-year{
+.about-year {
   font-size: 14px;
   display: flex;
   justify-content: center;
 }
 
-.about-img-container{
+.about-img-container {
+  display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 .about-img {
